--- a/client/src/app/modules/auth/modules/employee/components/orders/open-orders/shopping-list/shopping-list.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/open-orders/shopping-list/shopping-list.component.html
@@ -1,9 +1,11 @@
 <div fxLayout="column" fxLayoutGap="10px" faLayoutAlign="center">
-  <a routerLink="../open"><fa-icon icon="long-arrow-alt-left"></fa-icon> Open Orders</a>
-  <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between center">
-    <h3><fa-icon icon="file-invoice" size="2x"></fa-icon> Shopping List</h3>
-    <button mat-raised-button class="action" [disabled]="orderList.data.length===0" (click)="generatePDF()"><fa-icon icon="file-pdf"></fa-icon> Generate PDF</button>
-  </div>
+  <mat-toolbar>
+    <span><fa-icon icon="file-invoice"></fa-icon> Shopping List</span>
+    <span class="fill-remaining-space"></span>
+    <button mat-icon-button routerLink="../open" matTooltip="Go back to open orders"><fa-icon icon="long-arrow-alt-left"></fa-icon></button>
+    <button mat-icon-button [disabled]="orderList.data.length===0" (click)="moveOrdersToProcessed()" matTooltip="Move orders to 'Processed' status"><fa-icon icon="arrow-alt-circle-down"></fa-icon></button>        
+    <button mat-icon-button [disabled]="orderList.data.length===0" (click)="generatePDF()" matTooltip="Generate list in PDF"><fa-icon icon="file-pdf"></fa-icon></button>
+  </mat-toolbar>
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -11,13 +13,14 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="table-responsive">
-      <table mat-table [dataSource]="orderList" matSort>
+<!--       <table mat-table [dataSource]="orderList" matSort #orderSort="matSort"> -->
+      <table mat-table [dataSource]="orderList">
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <th mat-header-cell *matHeaderCellDef> ID </th>
           <td mat-cell *matCellDef="let row">{{row.id}}</td>
         </ng-container>
         <ng-container matColumnDef="clientName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> CLIENT NAME </th>
+          <th mat-header-cell *matHeaderCellDef> CLIENT NAME </th>
           <td mat-cell *matCellDef="let row">{{row.clientName}}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="orderColumns"></tr>
@@ -25,7 +28,7 @@
       </table>
     </div>
   </mat-expansion-panel>
-  <div><span class="thick">Product List:</span></div>
+  <div><span class="thick">Product List</span></div>
   <div>
     <table mat-table [dataSource]="productList" matSort>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
