--- a/client/src/app/modules/auth/modules/employee/components/orders/open-orders/package-distribution/package-distribution.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/open-orders/package-distribution/package-distribution.component.html
@@ -1,9 +1,38 @@
 <div fxLayout="column" fxLayoutGap="10px" faLayoutAlign="center">
-  <a routerLink="../open"><fa-icon icon="long-arrow-alt-left"></fa-icon> Open Orders</a>
+  <mat-toolbar>
+    <span><fa-icon icon="file-invoice"></fa-icon> Shopping List</span>
+    <span class="fill-remaining-space"></span>
+    <button mat-icon-button routerLink="../open" matTooltip="Go back to open orders"><fa-icon icon="long-arrow-alt-left"></fa-icon></button>
+    <button mat-icon-button [disabled]="orderList.data.length===0" (click)="moveOrdersToShipped()" matTooltip="Move orders to 'Shipped' status"><fa-icon icon="arrow-alt-circle-down"></fa-icon></button>        
+    <button mat-icon-button [disabled]="orderList.data.length===0" (click)="generatePDF()" matTooltip="Generate list in PDF"><fa-icon icon="file-pdf"></fa-icon></button>
+  </mat-toolbar>
+<!--   <a routerLink="../open"><fa-icon icon="long-arrow-alt-left"></fa-icon> Open Orders</a>
   <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between center">
     <h3><fa-icon icon="truck-loading" size="2x"></fa-icon> Package Distribution List</h3>
     <button mat-raised-button class="action" [disabled]="orderIds.length===0" (click)="generatePDF()"><fa-icon icon="file-pdf"></fa-icon> Generate PDF</button>
-  </div>
+  </div> -->
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Orders
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div class="table-responsive">
+<!--       <table mat-table [dataSource]="orderList" matSort #orderSort="matSort"> -->
+      <table mat-table [dataSource]="orderList">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="clientName">
+          <th mat-header-cell *matHeaderCellDef> CLIENT NAME </th>
+          <td mat-cell *matCellDef="let row">{{row.clientName}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="orderColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: orderColumns;"></tr>
+      </table>
+    </div>
+  </mat-expansion-panel>
   <mat-form-field appearance="outline">
     <mat-label>Delivery Route</mat-label>
     <mat-select placeholder="Select route" [value]="routeList[0]" (selectionChange)="changeRoute($event)">
