--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -37,14 +37,18 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> CATEGORY </th>
         <td mat-cell *matCellDef="let row"> {{row.category}} </td>
       </ng-container>
+      <ng-container matColumnDef="originCountry">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ORIGIN </th>
+        <td mat-cell *matCellDef="let row"> {{row.originCountry}} </td>
+      </ng-container>      
       <ng-container matColumnDef="unitPrice">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> UNIT PRICE </th>
         <td mat-cell *matCellDef="let row"> {{row.unitPrice}} </td>
       </ng-container>
-      <ng-container matColumnDef="inventoryCount">
+<!--       <ng-container matColumnDef="inventoryCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> INVENTORY COUNT </th>
         <td mat-cell *matCellDef="let row"> {{row.inventoryCount}} </td>
-      </ng-container>
+      </ng-container> -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
