--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -40,12 +40,16 @@
       <ng-container matColumnDef="originCountry">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ORIGIN </th>
         <td mat-cell *matCellDef="let row"> {{row.originCountry}} </td>
-      </ng-container>      
-      <ng-container matColumnDef="unitPrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> UNIT PRICE </th>
-        <td mat-cell *matCellDef="let row"> {{row.unitPrice}} </td>
       </ng-container>
-<!--       <ng-container matColumnDef="inventoryCount">
+      <ng-container matColumnDef="unitPrice">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> UNIT PRICE($)</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-form-field appearance="outline" class="mat-input-unitprice">
+            <input matInput type="number" min="0" step="0.01" [formControl]="row.unitPriceFC">
+          </mat-form-field>
+        </td>
+      </ng-container>
+<!--      <ng-container matColumnDef="inventoryCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> INVENTORY COUNT </th>
         <td mat-cell *matCellDef="let row"> {{row.inventoryCount}} </td>
       </ng-container> -->
