--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -49,6 +49,11 @@
           </mat-form-field>
         </td>
       </ng-container>
+     <ng-container matColumnDef="unit">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> UNIT </th>
+        <td mat-cell *matCellDef="let row"> {{row.unit}} </td>
+      </ng-container>
+
 <!--      <ng-container matColumnDef="inventoryCount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> INVENTORY COUNT </th>
         <td mat-cell *matCellDef="let row"> {{row.inventoryCount}} </td>
