Add 'unitLabel' to 'Metric' model.

--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -71,6 +71,6 @@
     </mat-grid-tile>
 <!--     <mat-grid-tile>
       <app-history-graph metricName="product_unit_price" [productId]=productIdSelected></app-history-graph>
-    </mat-grid-tile>
- -->  </mat-grid-list>
+    </mat-grid-tile>   -->
+  </mat-grid-list>
 </div>
