Add product sale related metrics.

--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -69,8 +69,8 @@
     <mat-grid-tile>
       <app-history-graph metricName="product_unit_price" [productId]=productIdSelected></app-history-graph>
     </mat-grid-tile>
-<!--     <mat-grid-tile>
-      <app-history-graph metricName="product_unit_price" [productId]=productIdSelected></app-history-graph>
-    </mat-grid-tile>   -->
+    <mat-grid-tile>
+      <app-history-graph metricName="product_sale_daily" [productId]=productIdSelected></app-history-graph>
+    </mat-grid-tile>  
   </mat-grid-list>
 </div>
