--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.css
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.css
@@ -1,3 +1,8 @@
+.products-container {
+  height: 500px;
+  overflow: auto;
+}
+
 .mat-input-unitprice {
   margin-bottom: -1.25em;   /* make input vertically center aligned */
   max-width: 100px !important;
