--- a/client/src/app/modules/auth/modules/employee/components/clients/client-detail/client-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/client-detail/client-detail.component.html
@@ -118,7 +118,7 @@
         <mat-form-field appearance="outline">
           <mat-label>Delivery Route</mat-label>
           <mat-select placeholder="Select route" [(ngModel)]="client.deliveryRouteId" required>
-            <mat-option *ngFor="let route of routeList" [value]="route">{{ route }}</mat-option>
+            <mat-option *ngFor="let route of routeList" [value]="route.id">{{route.id}} - {{route.name}}</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
