--- a/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-route-detail/delivery-route-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-route-detail/delivery-route-detail.component.html
@@ -8,6 +8,10 @@
 <!--     <h5 mat-subheader>Route Information</h5> -->
     <form [formGroup]="deliveryRouteFG" class="form-container">
       <mat-form-field appearance="outline">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Name" formControlName="name">
+      </mat-form-field>
+      <mat-form-field appearance="outline">
         <mat-label>Description</mat-label>
         <input matInput placeholder="Description" formControlName="description">
       </mat-form-field>
@@ -29,7 +33,7 @@
   </mat-card-content>
   <mat-card-actions align="end">
     <button mat-raised-button routerLink="../">Close</button>
-    <button mat-raised-button color="green" (click)="save()">Save</button>
+    <button mat-raised-button color="green" [disabled]="deliveryRouteFG.invalid" (click)="save()">Save</button>
     <button mat-raised-button color="warn" (click)="delete()">Delete</button>
   </mat-card-actions>
 </mat-card>
