--- a/client/src/app/modules/auth/modules/employee/components/delivery-routes/new-delivery-route/new-delivery-route.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/delivery-routes/new-delivery-route/new-delivery-route.component.html
@@ -2,8 +2,8 @@
 <div mat-dialog-content>
   <form [formGroup]="deliveryRouteFG" class="form-container">
     <mat-form-field appearance="outline">
-      <mat-label>ID</mat-label>
-      <input matInput placeholder="Delivery route name" formControlName="id">
+      <mat-label>NAME</mat-label>
+      <input matInput placeholder="Delivery route name" formControlName="name">
       <mat-error>This field is required</mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline">
