--- a/client/src/app/modules/auth/modules/employee/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/new-order/new-order.component.html
@@ -68,11 +68,11 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-                <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice}}&#47;{{row.unit}}</td>
+                <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
               </ng-container>
               <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
-                <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
+                <td mat-cell *matCellDef="let row">{{row.subtotal | currency}}</td>
               </ng-container>              
             </table>
           </div>
@@ -138,7 +138,7 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-                <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice}}&#47;{{row.unit}}</td>
+                <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
               </ng-container>
               <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef> QTY. </th>
@@ -146,7 +146,7 @@
               </ng-container>
               <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
-                <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
+                <td mat-cell *matCellDef="let row">{{row.subtotal | currency}}</td>
               </ng-container>              
             </table>
           </div>
