Add chartType input to history graph.

--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -70,7 +70,7 @@
       <app-history-graph metricName="product_unit_price" [instanceId]=productSelected?.id> [</app-history-graph>
     </mat-grid-tile>
     <mat-grid-tile>
-      <app-history-graph metricName="product_sale_daily" [instanceId]=productSelected?.id></app-history-graph>
+      <app-history-graph metricName="product_sale_daily" chartType="ColumnChart" [instanceId]=productSelected?.id></app-history-graph>
     </mat-grid-tile>  
   </mat-grid-list>
 </div>
