Add client sale daily chart to clients component.

--- a/client/src/app/modules/auth/modules/employee/components/charts/history-graph/history-graph.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/charts/history-graph/history-graph.component.html
@@ -4,4 +4,6 @@
 <ng-template #elseBlock>
   <google-chart [data]="historyChart"></google-chart>
 </ng-template> -->
-<google-chart [data]="historyChart"></google-chart>
+<div *ngIf="instanceId">
+  <google-chart [data]="historyChart"></google-chart>
+</div>
