--- a/client/src/app/modules/auth/modules/employee/components/clients/clients/clients.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/clients/clients.component.html
@@ -11,7 +11,7 @@
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
   </mat-form-field>
-  <div class="mat-elevation-z8">
+  <div class="clients-container mat-elevation-z8">
     <table mat-table [dataSource]="getClients()" matSort>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
@@ -34,8 +34,15 @@
         <td mat-cell *matCellDef="let row"> {{row.createdDate | date:'shortDate'}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'selected': selection.isSelected(row)}" (click)="selection.select(row)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
   </div>
+</div>
+<div>
+  <mat-grid-list cols="2" rowHeight="2:1" gutterSize="10px">
+    <mat-grid-tile>
+      <app-history-graph metricName="client_sale_daily" chartType="ColumnChart" [instanceId]=clientSelected?.id></app-history-graph>
+    </mat-grid-tile>
+   </mat-grid-list>
 </div>
