--- a/client/src/app/modules/auth/modules/employee/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/dashboard/dashboard.component.html
@@ -8,5 +8,8 @@
     <div fxFlex="1 0 300px">
       <app-rank-graph metricName="product_sale_daily" chartTitle="Top Products"></app-rank-graph>
     </div>
+    <div fxFlex="1 0 300px">
+      <app-rank-graph metricName="delivery_route_sale_daily" chartTitle="Top Delivery Routes"></app-rank-graph>
+    </div>
   </div>
 </div>
