--- a/client/src/app/modules/auth/modules/employee/components/clients/clients/clients.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/clients/clients.component.html
@@ -39,10 +39,8 @@
     <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
   </div>
 </div>
-<div>
-  <mat-grid-list cols="2" rowHeight="2:1" gutterSize="10px">
-    <mat-grid-tile>
-      <app-history-graph metricName="client_sale_daily" chartType="ColumnChart" [instanceId]=clientSelected?.id></app-history-graph>
-    </mat-grid-tile>
-   </mat-grid-list>
+<div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="start center" style="margin-top: 10px">
+  <div fxFlex="1 0 400px">
+    <app-history-graph metricName="client_sale_daily" chartType="ColumnChart" [instanceId]=clientSelected?.id></app-history-graph>
+  </div>
 </div>
