--- a/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
@@ -49,7 +49,7 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-                <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
+                <td mat-cell *matCellDef="let row">{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
               </ng-container>
               <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
@@ -117,7 +117,7 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-                <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
+                <td mat-cell *matCellDef="let row">{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
               </ng-container>
               <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef> QTY. </th>
