--- a/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
@@ -82,7 +82,7 @@
             </ng-container>
             <ng-container matColumnDef="unitPrice">
               <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-              <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice}}&#47;{{row.unit}}</td>
+              <td mat-cell *matCellDef="let row">{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
             </ng-container>
             <ng-container matColumnDef="subtotal">
               <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
