--- a/client/src/app/modules/auth/modules/employee/components/clients/client-detail/client-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/client-detail/client-detail.component.html
@@ -6,145 +6,161 @@
     <mat-card-subtitle>Created on {{client.createdDate | date:'medium' }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content class="form-container">
-    <h5 mat-subheader>Business Information</h5>
-    <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
-      <div fxFlex="5 0 300px">
+    <div fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="center space-between" >
+      <div class="round-corners">
+        <h5 mat-subheader>Business Information</h5>
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+          <div fxFlex="5 0 300px">
+            <mat-form-field appearance="outline">
+              <mat-label>Name</mat-label>
+              <input matInput placeholder="Client name" [(ngModel)]="client.name" required>
+            </mat-form-field>
+          </div>
+          <div fxFlex="1 0 100px">
+            <mat-slide-toggle [(ngModel)]="client.showPublic" color="primary" matTooltip="Make this client available to public" matTooltipPosition="below">Show Public?</mat-slide-toggle>
+          </div>
+        </div>
         <mat-form-field appearance="outline">
-          <mat-label>Name</mat-label>
-          <input matInput placeholder="Client name" [(ngModel)]="client.name" required>
+          <mat-label>Street</mat-label>
+          <input matInput placeholder="Street number, name, etc." [(ngModel)]="client.addressStreet">
         </mat-form-field>
-      </div>
-      <div fxFlex="1 0 100px">
-        <mat-slide-toggle [(ngModel)]="client.showPublic" color="primary" matTooltip="Make this client available to public" matTooltipPosition="below">Show Public?</mat-slide-toggle>
-      </div>
-    </div>
-    <mat-form-field appearance="outline">
-      <mat-label>Street</mat-label>
-      <input matInput placeholder="Street number, name, etc." [(ngModel)]="client.addressStreet">
-    </mat-form-field>
-    <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
-      <div fxFlex="3 0 300px">
-        <mat-form-field appearance="outline">
-          <mat-label>City</mat-label>
-          <input matInput placeholder="City" [(ngModel)]="client.addressCity">
-        </mat-form-field>
-      </div>
-      <div fxFlex="1 0 150px">
-        <mat-form-field appearance="outline">    
-          <mat-label>State</mat-label>
-          <mat-select placeholder="State" [(ngModel)]="client.addressState">
-            <mat-option *ngFor="let state of stateList" [value]="state">{{ state }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div fxFlex="1 0 200px">
-        <mat-form-field appearance="outline">
-          <mat-label>Zip Code</mat-label>
-          <input matInput placeholder="Zip code" [(ngModel)]="client.addressZip">
-        </mat-form-field>
-      </div>
-    </div>
-    <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
-      <div fxFlex="1 0 300px">
-        <mat-form-field appearance="outline">
-          <mat-label>Phone</mat-label>
-          <input matInput placeholder="Business phone #" [(ngModel)]="client.phone" [textMask]="{mask: phoneMask}">
-        </mat-form-field>
-      </div>
-      <div fxFlex="1 0 300px">
-        <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Business email address" [formControl]="businessEmailFC">
-          <mat-error *ngIf="businessEmailFC.hasError('email')">
-            Please, enter a valid email address
-          </mat-error>
-        </mat-form-field>
-      </div>
-    </div>
-    <h5 mat-subheader>Contact Information</h5>
-    <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-between stretch">
-      <div fxLayout="column" fxFlex="45">
-        Contact Person
-        <div>
-          <mat-form-field appearance="outline">
-            <mat-label>Name</mat-label>
-            <input matInput placeholder="Name" [(ngModel)]="client.contactPersonName">
-          </mat-form-field>  
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+          <div fxFlex="3 0 300px">
+            <mat-form-field appearance="outline">
+              <mat-label>City</mat-label>
+              <input matInput placeholder="City" [(ngModel)]="client.addressCity">
+            </mat-form-field>
+          </div>
+          <div fxFlex="1 0 150px">
+            <mat-form-field appearance="outline">    
+              <mat-label>State</mat-label>
+              <mat-select placeholder="State" [(ngModel)]="client.addressState">
+                <mat-option *ngFor="let state of stateList" [value]="state">{{ state }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div fxFlex="1 0 200px">
+            <mat-form-field appearance="outline">
+              <mat-label>Zip Code</mat-label>
+              <input matInput placeholder="Zip code" [(ngModel)]="client.addressZip">
+            </mat-form-field>
+          </div>
         </div>
-        <div>
-          <mat-form-field appearance="outline">
-            <mat-label>Phone</mat-label>
-            <input matInput placeholder="Phone" [(ngModel)]="client.contactPersonPhone" [textMask]="{mask: phoneMask}">
-          </mat-form-field>  
-        </div>
-        <div>
-          <mat-form-field appearance="outline">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" [formControl]="personEmailFC">
-            <mat-error *ngIf="personEmailFC.hasError('email')">
-              Please, enter a valid email address
-            </mat-error>
-          </mat-form-field>  
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+          <div fxFlex="1 0 300px">
+            <mat-form-field appearance="outline">
+              <mat-label>Phone</mat-label>
+              <input matInput placeholder="Business phone #" [(ngModel)]="client.phone" [textMask]="{mask: phoneMask}">
+            </mat-form-field>
+          </div>
+          <div fxFlex="1 0 300px">
+            <mat-form-field appearance="outline">
+              <mat-label>Email</mat-label>
+              <input matInput placeholder="Business email address" [formControl]="businessEmailFC">
+              <mat-error *ngIf="businessEmailFC.hasError('email')">
+                Please, enter a valid email address
+              </mat-error>
+            </mat-form-field>
+          </div>
         </div>
       </div>
-      <div fxLayout="column" fxFlex="45">
-        Alternative Contact Person
-        <div>
-          <mat-form-field appearance="outline">
-            <mat-label>Name</mat-label>
-            <input matInput placeholder="Name" [(ngModel)]="client.contactPersonAltName">
-          </mat-form-field>  
-        </div>
-        <div>
-          <mat-form-field appearance="outline">
-            <mat-label>Phone</mat-label>
-            <input matInput placeholder="Phone" [(ngModel)]="client.contactPersonAltPhone" [textMask]="{mask: phoneMask}">
-          </mat-form-field>  
-        </div>
-        <div>
-          <mat-form-field appearance="outline">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" [formControl]="personAltEmailFC">
-            <mat-error *ngIf="personAltEmailFC.hasError('email')">
-              Please, enter a valid email address
-            </mat-error>
-          </mat-form-field>  
+      <div class="round-corners">
+        <h5 mat-subheader>Contact Information</h5>
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-between stretch">
+          <div fxLayout="column" fxFlex="45">
+            Contact Person
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input matInput placeholder="Name" [(ngModel)]="client.contactPersonName">
+              </mat-form-field>  
+            </div>
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Phone</mat-label>
+                <input matInput placeholder="Phone" [(ngModel)]="client.contactPersonPhone" [textMask]="{mask: phoneMask}">
+              </mat-form-field>  
+            </div>
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput placeholder="Email" [formControl]="personEmailFC">
+                <mat-error *ngIf="personEmailFC.hasError('email')">
+                  Please, enter a valid email address
+                </mat-error>
+              </mat-form-field>  
+            </div>
+          </div>
+          <div fxLayout="column" fxFlex="45">
+            Alternative Contact Person
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input matInput placeholder="Name" [(ngModel)]="client.contactPersonAltName">
+              </mat-form-field>  
+            </div>
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Phone</mat-label>
+                <input matInput placeholder="Phone" [(ngModel)]="client.contactPersonAltPhone" [textMask]="{mask: phoneMask}">
+              </mat-form-field>  
+            </div>
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput placeholder="Email" [formControl]="personAltEmailFC">
+                <mat-error *ngIf="personAltEmailFC.hasError('email')">
+                  Please, enter a valid email address
+                </mat-error>
+              </mat-form-field>  
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <h5 mat-subheader>Order Information</h5>
-    <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-between stretch">
-      <div fxFlex="2 0 300px">
-        <mat-form-field appearance="outline">
-          <mat-label>Delivery Route</mat-label>
-          <mat-select placeholder="Select route" [(ngModel)]="client.deliveryRouteId" required>
-            <mat-option *ngFor="let route of routeList" [value]="route.id">{{route.id}} - {{route.name}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between stretch">
-        <div fxFlex="1 0 150px">
-          <mat-form-field appearance="outline">
-            <mat-label>Fee Type</mat-label>
-            <mat-select placeholder="Select fee type" [(ngModel)]="client.feeType">
-              <mat-option *ngFor="let feeType of feeTypeList" [value]="feeType">{{ feeType }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div fxFlex="1 0 150px">
-          <mat-form-field appearance="outline">
-            <mat-label>Fee Value</mat-label>
-            <input matInput type="number" class="right" placeholder="Fee value" [(ngModel)]="client.feeValue">
-            <span matPrefix *ngIf="client.feeType==='Fixed'">$&nbsp;</span>
-            <span matSuffix *ngIf="client.feeType==='Rate'">%&nbsp;</span>
-          </mat-form-field>
+      <div class="round-corners">
+        <h5 mat-subheader>Order Information</h5>
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-between stretch">
+          <div fxFlex="3 0 300px">
+            <mat-form-field appearance="outline">
+              <mat-label>Delivery Route</mat-label>
+              <mat-select placeholder="Select route" [(ngModel)]="client.deliveryRouteId" required>
+                <mat-option *ngFor="let route of routeList" [value]="route.id">{{route.id}} - {{route.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between stretch">
+            <div fxFlex="1 0 100px">
+              <mat-form-field appearance="outline">
+                <mat-label>Fee Type</mat-label>
+                <mat-select placeholder="Select fee type" [(ngModel)]="client.feeType">
+                  <mat-option *ngFor="let feeType of feeTypeList" [value]="feeType">{{ feeType }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div fxFlex="1 0 100px">
+              <mat-form-field appearance="outline">
+                <mat-label>Fee Value</mat-label>
+                <input matInput type="number" class="right" placeholder="Fee value" [(ngModel)]="client.feeValue">
+                <span matPrefix *ngIf="client.feeType==='Fixed'">$&nbsp;</span>
+                <span matSuffix *ngIf="client.feeType==='Rate'">%&nbsp;</span>
+              </mat-form-field>
+            </div>
+            <div fxFlex="1 0 100px" [hidden]="client.feeType!=='Fixed'">
+              <mat-form-field appearance="outline">
+                <mat-label>Fee Schedule</mat-label>
+                <mat-select placeholder="Select fee schedule" [(ngModel)]="client.feeSchedule"  matTooltip="For 'Fixed' fee, you must select when it should be added.">
+                  <mat-option *ngFor="let feeSchedule of feeScheduleList" [value]="feeSchedule">{{ feeSchedule }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-raised-button routerLink="../">Close</button>
-    <button mat-raised-button color="green" (click)="save()">Save</button>
+    <button mat-raised-button class="action" routerLink="../">Close</button>
+    <button mat-raised-button class="action" color="green" (click)="save()">Save</button>
     <!-- Hide delete button until more secure confirm dialog 
       <button mat-raised-button color="warn" (click)="delete()">Delete</button> -->
   </mat-card-actions>
