--- a/client/src/app/modules/auth/modules/employee/components/clients/new-client/new-client.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/new-client/new-client.component.html
@@ -120,7 +120,7 @@
       <mat-step formGroupName="2" [stepControl]="orderFormGroup" [completed]="false">
         <ng-template matStepLabel><fa-icon icon="shopping-cart"></fa-icon> Order processing detail</ng-template>
         <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-between stretch">
-          <div fxFlex="2 0 300px">
+          <div fxFlex="3 0 300px">
             <mat-form-field appearance="outline">
               <mat-label>Delivery Route</mat-label>
               <mat-select placeholder="Select route" formControlName="deliveryRouteId" required>
@@ -130,7 +130,7 @@
             </mat-form-field>
           </div>
           <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between stretch">
-            <div fxFlex="1 0 150px">
+            <div fxFlex="1 0 100px">
               <mat-form-field appearance="outline">
                 <mat-label>Fee Type</mat-label>
                 <mat-select placeholder="Select fee type" formControlName="feeType" required>
@@ -139,13 +139,22 @@
                 <mat-error>This field is required</mat-error>
               </mat-form-field>
             </div>
-            <div fxFlex="1 0 150px">
+            <div fxFlex="1 0 100px">
               <mat-form-field appearance="outline">
                 <mat-label>Fee Value</mat-label>
                 <input matInput type="number" class="right" placeholder="Fee value" formControlName="feeValue">
                 <span matPrefix *ngIf="orderFormGroup.get('feeType').value==='Fixed'">$&nbsp;</span>
                 <span matSuffix *ngIf="orderFormGroup.get('feeType').value==='Rate'">%&nbsp;</span>
                 <mat-error>This field is required</mat-error>                
+              </mat-form-field>
+            </div>
+            <div fxFlex="1 0 100px" [hidden]="orderFormGroup.get('feeType').value!=='Fixed'">
+              <mat-form-field appearance="outline">
+                <mat-label>Fee Schedule</mat-label>
+                <mat-select placeholder="Select fee schedule" matTooltip="For 'Fixed' fee, you must select when it should be added." formControlName="feeSchedule" required>
+                  <mat-option *ngFor="let feeSchedule of feeScheduleList" [value]="feeSchedule">{{ feeSchedule }}</mat-option>
+                </mat-select>
+                <mat-error>This field is required</mat-error>
               </mat-form-field>
             </div>
           </div>
