--- a/client/src/app/modules/auth/modules/employee/components/clients/client-detail/client-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/clients/client-detail/client-detail.component.html
@@ -119,40 +119,37 @@
       </div>
       <div class="round-corners">
         <h5 mat-subheader>Order Information</h5>
-        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-between stretch">
-          <div fxFlex="3 0 300px">
+        <mat-form-field appearance="outline">
+          <mat-label>Delivery Route</mat-label>
+          <mat-select placeholder="Select route" [(ngModel)]="client.deliveryRouteId" required>
+            <mat-option *ngFor="let route of routeList" [value]="route.id">{{route.id}} - {{route.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+          <div fxFlex="1 0 100px">
             <mat-form-field appearance="outline">
-              <mat-label>Delivery Route</mat-label>
-              <mat-select placeholder="Select route" [(ngModel)]="client.deliveryRouteId" required>
-                <mat-option *ngFor="let route of routeList" [value]="route.id">{{route.id}} - {{route.name}}</mat-option>
+              <mat-label>Fee Schedule</mat-label>
+              <mat-select placeholder="Select fee schedule" [(ngModel)]="client.feeSchedule" (ngModelChange)="onFeeScheduleChange($event)" matTooltip="Select when fee should be added.">
+                <mat-option *ngFor="let feeSchedule of feeScheduleList" [value]="feeSchedule">{{ feeSchedule }}</mat-option>
               </mat-select>
             </mat-form-field>
           </div>
-          <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between stretch">
-            <div fxFlex="1 0 100px">
-              <mat-form-field appearance="outline">
-                <mat-label>Fee Type</mat-label>
-                <mat-select placeholder="Select fee type" [(ngModel)]="client.feeType">
-                  <mat-option *ngFor="let feeType of feeTypeList" [value]="feeType">{{ feeType }}</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div fxFlex="1 0 100px">
-              <mat-form-field appearance="outline">
-                <mat-label>Fee Value</mat-label>
-                <input matInput type="number" class="right" placeholder="Fee value" [(ngModel)]="client.feeValue">
-                <span matPrefix *ngIf="client.feeType==='Fixed'">$&nbsp;</span>
-                <span matSuffix *ngIf="client.feeType==='Rate'">%&nbsp;</span>
-              </mat-form-field>
-            </div>
-            <div fxFlex="1 0 100px" [hidden]="client.feeType!=='Fixed'">
-              <mat-form-field appearance="outline">
-                <mat-label>Fee Schedule</mat-label>
-                <mat-select placeholder="Select fee schedule" [(ngModel)]="client.feeSchedule"  matTooltip="For 'Fixed' fee, you must select when it should be added.">
-                  <mat-option *ngFor="let feeSchedule of feeScheduleList" [value]="feeSchedule">{{ feeSchedule }}</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
+          <div fxFlex="1 0 100px">
+            <mat-form-field appearance="outline">
+              <mat-label>Fee Type</mat-label>
+              <mat-select placeholder="Select fee type" [(ngModel)]="client.feeType" [disabled]="client.feeSchedule==='None'" required>
+                <mat-option *ngFor="let feeType of feeTypeList" [value]="feeType">{{ feeType }}</mat-option>
+              </mat-select>
+              <mat-error>This field is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div fxFlex="1 0 100px">
+            <mat-form-field appearance="outline">
+              <mat-label>Fee Value</mat-label>
+              <input matInput type="number" class="right" placeholder="Fee value" [(ngModel)]="client.feeValue" [disabled]="client.feeSchedule==='None'">
+              <span matPrefix *ngIf="client.feeType==='Fixed'">$&nbsp;</span>
+              <span matSuffix *ngIf="client.feeType==='Rate'">%&nbsp;</span>
+            </mat-form-field>
           </div>
         </div>
       </div>
@@ -160,7 +157,7 @@
   </mat-card-content>
   <mat-card-actions align="end">
     <button mat-raised-button class="action" routerLink="../">Close</button>
-    <button mat-raised-button class="action" color="green" (click)="save()">Save</button>
+    <button mat-raised-button class="action" color="green" (click)="save()" [disabled]="invalid()">Save</button>
     <!-- Hide delete button until more secure confirm dialog 
       <button mat-raised-button color="warn" (click)="delete()">Delete</button> -->
   </mat-card-actions>
