Update fee handling in employee module.

--- a/client/src/app/modules/auth/modules/employee/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/new-order/new-order.component.html
@@ -81,7 +81,7 @@
               <div>
                 Subtotal: {{order.subtotal | currency}}
               </div>
-              <div>
+              <div *ngIf="isFeeApplicable()">
                 Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
                 </fa-icon>                  
               </div>
@@ -155,7 +155,7 @@
               <div>
                 Subtotal: {{order.subtotal | currency}}
               </div>
-              <div>
+              <div *ngIf="isFeeApplicable()">
                 Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
                 </fa-icon>                  
               </div>
