--- a/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
@@ -95,7 +95,7 @@
             <div>
               Subtotal: {{order.subtotal | currency}}
             </div>
-            <div>
+            <div *ngIf="isFeeApplicable()">
               Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
               </fa-icon>                  
             </div>
