Add message-detail component.

--- a/client/src/app/modules/auth/modules/employee/components/messages/messages/messages.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/messages/messages/messages.component.html
@@ -10,7 +10,7 @@
 <div class="table-responsive">
   <div class="mat-elevation-z8">
     <div class="order-button-row" fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="center space-between">
-      <button mat-stroked-button (click)="markAsRead()" matTooltip="Mark selected messages as read" [disabled]="selections.selected.length==0"><fa-icon icon="envelope-open"></fa-icon> Mark as read</button>
+<!--       <button mat-stroked-button (click)="markAsRead()" matTooltip="Mark selected messages as read" [disabled]="selections.selected.length==0"><fa-icon icon="envelope-open"></fa-icon> Mark as read</button> -->
       <button mat-stroked-button (click)="delete()" matTooltip="Delete selected messages" [disabled]="selections.selected.length == 0"><fa-icon icon="trash-alt"></fa-icon> Delete</button>
     </div>    
     <mat-form-field>
@@ -52,7 +52,7 @@
         <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'shortDate'}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="readMessage(row)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
   </div>
