Add message related components to customer module.

--- a/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.css
+++ b/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.css
@@ -30,3 +30,8 @@
 .navbar-nav li a {
   line-height: 40px;
 }
+
+/* Adjust badge size. */
+:host ::ng-deep .fa-custom-counter {
+  transform: scale(0.8) translateX(50%) translateY(-50%);
+}
