--- a/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.html
@@ -11,6 +11,14 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="messages">
+            <fa-layers>
+              <fa-icon icon="bell"></fa-icon>
+              <fa-layers-counter *ngIf="unreadMsgCount!=='0'" [content]="unreadMsgCount" [classes]="['fa-custom-counter']"></fa-layers-counter>
+            </fa-layers>
+          </a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" (click)="settings()"><fa-icon icon="cog"></fa-icon></a>
         </li>
         <li class="nav-item dropdown">
