Add CKEditor for message composition.

--- a/client/src/app/modules/auth/modules/customer/components/messages/message-detail/message-detail.component.css
+++ b/client/src/app/modules/auth/modules/customer/components/messages/message-detail/message-detail.component.css
@@ -1,5 +1,6 @@
-.message-body {
+div.message-viewer {
   min-width: 800px;
   min-height: 400px;
-  white-space: pre-wrap;
+  border: 1px solid #e6e6e6;
+  padding: 20px;
 }
