--- a/client/src/app/modules/auth/modules/customer/components/messages/message-detail/message-detail.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/messages/message-detail/message-detail.component.html
@@ -1,12 +1,13 @@
-<h3 mat-dialog-title><fa-icon icon="envelope" size="2x" style="margin-right: 15px"></fa-icon> Message</h3>
+<h3 mat-dialog-title><fa-icon icon="{{messageIcon()}}" size="2x" style="margin-right: 15px"></fa-icon> {{messageTitle()}}</h3>
 <div mat-dialog-content>
-  <h2><fa-icon icon="{{messageIcon(data.message.messageType)}}" style="margin-right: 15px"></fa-icon>{{data.message.messageType}}</h2>
-  <div fxLayout="row" fxLayoutAlign="space-between center">
-    <p class="thick">Created By: {{data.message.fromUser}}</p>
-    <p>Created At: {{data.message.createdAt | date: 'short'}}</p>
+  <div fxLayout="column" fxLayoutGap="5px" fxLayoutAlign="center space-between">
+    <div fxLayout="row" fxLayoutAlign="space-between center">
+      <p class="thick">Created By: {{data.message.fromUser}}</p>
+      <p>Created At: {{data.message.createdAt | date: 'short'}}</p>
+    </div>
+    <div><p class="thick">Subject: {{data.message.subject}}</p></div>
+    <div innerHtml="{{data.message.body}}" class="message-viewer"></div>
   </div>
-  <p class="thick">Subject: {{data.message.subject}}</p>
-  <p class="message-body">{{data.message.body}}</p>
 </div>
 <mat-divider></mat-divider>
 <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end">
