--- a/client/src/app/modules/auth/modules/employee/components/messages/message-detail/message-detail.component.css
+++ b/client/src/app/modules/auth/modules/employee/components/messages/message-detail/message-detail.component.css
@@ -1,5 +1,10 @@
-.message-body {
+:host ::ng-deep .ck-editor__editable_inline {
+  min-height: 500px;
+}
+
+div.message-viewer {
   min-width: 800px;
   min-height: 400px;
-  white-space: pre-wrap;
+  border: 1px solid #e6e6e6;
+  padding: 20px;
 }
