Update user log table format and data entries.

--- a/client/src/app/modules/auth/modules/employee/components/users/users/users.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/users/users/users.component.html
@@ -39,8 +39,6 @@
     <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
   </div>
 </div>
-<div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="start center" style="margin-top: 10px">
-  <div *ngIf="userSelected">
-    <app-user-logs [authId]=userSelected?.authId></app-user-logs>
-  </div>
+<div *ngIf="userSelected">
+  <app-user-logs [userId]=userSelected?.id></app-user-logs>
 </div>
