Add google map component to delivery-routes page.

--- a/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes/delivery-routes.component.css
+++ b/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes/delivery-routes.component.css
@@ -1,8 +1,14 @@
 .delivery-routes-container {
-  max-height: 500px;
-  overflow: auto;
+  min-height: 400px;
+  max-height: 700px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .mat-row.selected {
    background: #eafaea;
+}
+
+.map-drawer {
+  padding: 20px;
 }
