--- a/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes/delivery-routes.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes/delivery-routes.component.html
@@ -7,38 +7,53 @@
     </button>
   </div>
 </div>
-<div class="table-responsive">
-  <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-  </mat-form-field>
-  <div class="delivery-routes-container mat-elevation-z8">
-    <table mat-table [dataSource]="getDeliveryRoutes()" matSort>
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let row"><a [routerLink]="[row.id]">{{row.id}}</a></td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NAME </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> DESCRIPTION </th>
-        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
-      </ng-container>
-      <ng-container matColumnDef="driverName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> DRIVER NAME </th>
-        <td mat-cell *matCellDef="let row"> {{row.driverName}} </td>
-      </ng-container>
-      <ng-container matColumnDef="driverPhone">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> DRIVER PHONE </th>
-        <td mat-cell *matCellDef="let row"> {{row.driverPhone}} </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'selected': selection.isSelected(row)}" (click)="selection.select(row)"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
-  </div>
-</div>
+<mat-drawer-container class="delivery-routes-container">
+  <mat-drawer #map_drawer class="map-drawer" position="end" mode="side">
+    <app-route-map [deliveryRoute]="deliveryRouteSelected"></app-route-map>
+  </mat-drawer>
+  <mat-drawer-content>
+    <div class="table-responsive">
+      <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="start center">
+        <div fxFlex="auto">
+          <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+          </mat-form-field>
+        </div>
+        <div fxFlex="none">
+          <button mat-icon-button matTooltip="Open/Close mat view" (click)="map_drawer.toggle()"><fa-icon icon="map-marked-alt"></fa-icon></button>
+        </div>
+      </div>
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="getDeliveryRoutes()" matSort>
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let row"><a [routerLink]="[row.id]">{{row.id}}</a></td>
+          </ng-container>
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> NAME </th>
+            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> DESCRIPTION </th>
+            <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+          </ng-container>
+          <ng-container matColumnDef="driverName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> DRIVER NAME </th>
+            <td mat-cell *matCellDef="let row"> {{row.driverName}} </td>
+          </ng-container>
+          <ng-container matColumnDef="driverPhone">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> DRIVER PHONE </th>
+            <td mat-cell *matCellDef="let row"> {{row.driverPhone}} </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'selected': selection.isSelected(row)}" (click)="selection.select(row)"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
+      </div>
+    </div>
+  </mat-drawer-content>
+</mat-drawer-container>
+<p></p>
 <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="start center" style="margin-top: 10px">
   <div fxFlex="1 0 400px">
     <app-history-graph metricName="delivery_route_sale_daily" chartType="ColumnChart" [instanceId]=deliveryRouteSelected?.id></app-history-graph>
